Variant 2 straight division and print at the end

--- a/Problem Set 1.vcxproj.filters
+++ b/Problem Set 1.vcxproj.filters
@@ -20,6 +20,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Variant2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="Variant1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
