--- a/Problem Set 1.vcxproj
+++ b/Problem Set 1.vcxproj
@@ -131,6 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Variant1.cpp" />
+    <ClCompile Include="Variant2.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
